@@ -47,6 +47,8 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Fixed issue causing stack trace when python Action function contains a unicode string when being
       run with Python 2.7
     - Add alternate path to QT install for Centos in qt tool: /usr/lib64/qt-3.3/bin
+    - Fix GH Issue #2580 - # in FRAMEWORKPATH doesn't get properly expanded. The # is left in the
+      command line.
 
   From Andrew Featherstone
     - Removed unused --warn options from the man page and source code.
